docs/0.6/_sources/api/gammapy.spectrum.FluxPoints.rst.txt


FluxPoints
===========================

.. currentmodule:: gammapy.spectrum

.. autoclass:: FluxPoints
   :show-inheritance:

   
     
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~FluxPoints.e_max
      ~FluxPoints.e_min
      ~FluxPoints.e_ref
      ~FluxPoints.sed_type

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~FluxPoints.drop_ul
      ~FluxPoints.get_energy_err
      ~FluxPoints.get_flux_err
      ~FluxPoints.info
      ~FluxPoints.peek
      ~FluxPoints.plot
      ~FluxPoints.read
      ~FluxPoints.stack
      ~FluxPoints.write

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: e_max
   .. autoattribute:: e_min
   .. autoattribute:: e_ref
   .. autoattribute:: sed_type

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: drop_ul
   .. automethod:: get_energy_err
   .. automethod:: get_flux_err
   .. automethod:: info
   .. automethod:: peek
   .. automethod:: plot
   .. automethod:: read
   .. automethod:: stack
   .. automethod:: write

   
   